Use List.of() and Set.of() where feasible